tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_null_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do {
  let bomb = (n) =>
    switch(n) {
      case null: true
      case null: false
    }
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_null_1.kk:5:12
  │
5 │       case null: false
  │            ^^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
